--- a/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
+++ b/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
@@ -25,7 +25,7 @@ D:\Users\πÀ”∞_\Desktop\Direction-module-of-unmanned-vehicle\Project\MDK-ARM\GY_8
 Project File Date:  03/30/2018
 
 <h2>Output:</h2>
-Build target 'Target 1'
+Rebuild target 'Target 1'
 assembling startup_stm32f072.s...
 compiling system_stm32f0xx.c...
 compiling stm32f0xx_cec.c...
@@ -56,22 +56,13 @@ compiling usart.c...
 compiling mpu6050.c...
 compiling IMU.c...
 compiling HMC5883L.c...
-..\..\BSP\HMC5883L.c(36): warning:  #550-D: variable "tempA" was set but never used
-        u8 tempA ,tempB ,tempC;
-..\..\BSP\HMC5883L.c(36): warning:  #177-D: variable "tempB" was declared but never referenced
-        u8 tempA ,tempB ,tempC;
-..\..\BSP\HMC5883L.c(36): warning:  #177-D: variable "tempC" was declared but never referenced
-        u8 tempA ,tempB ,tempC;
-..\..\BSP\HMC5883L.c(196): warning:  #111-D: statement is unreachable
-        HMC5883_cnt= 0;
-..\..\BSP\HMC5883L.c: 4 warnings, 0 errors
 compiling timer.c...
 compiling main.c...
 compiling stm32f0xx_it.c...
 linking...
-Program Size: Code=19356 RO-data=772 RW-data=320 ZI-data=2160  
+Program Size: Code=19220 RO-data=772 RW-data=152 ZI-data=1984  
 FromELF: creating hex file...
-".\Objects\GY_86_demo.axf" - 0 Error(s), 4 Warning(s).
+".\Objects\GY_86_demo.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   D:\Users\πÀ”∞_\Desktop\Direction-module-of-unmanned-vehicle\Project\MDK-ARM\RTE
