--- a/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
+++ b/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
@@ -25,44 +25,24 @@ D:\Users\πÀ”∞_\Desktop\Direction-module-of-unmanned-vehicle\Project\MDK-ARM\GY_8
 Project File Date:  03/30/2018
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
-assembling startup_stm32f072.s...
-compiling system_stm32f0xx.c...
-compiling stm32f0xx_cec.c...
-compiling stm32f0xx_comp.c...
-compiling stm32f0xx_crc.c...
-compiling stm32f0xx_crs.c...
-compiling stm32f0xx_dac.c...
-compiling stm32f0xx_dbgmcu.c...
-compiling stm32f0xx_dma.c...
-compiling stm32f0xx_exti.c...
-compiling stm32f0xx_flash.c...
-compiling stm32f0xx_gpio.c...
-compiling stm32f0xx_i2c.c...
-compiling stm32f0xx_iwdg.c...
-compiling stm32f0xx_misc.c...
-compiling stm32f0xx_pwr.c...
-compiling stm32f0xx_rcc.c...
-compiling stm32f0xx_rtc.c...
-compiling stm32f0xx_spi.c...
-compiling stm32f0xx_syscfg.c...
-compiling stm32f0xx_tim.c...
-compiling stm32f0xx_usart.c...
-compiling stm32f0xx_wwdg.c...
-compiling led.c...
-compiling i2c.c...
-compiling systick.c...
-compiling usart.c...
+Build target 'Target 1'
 compiling mpu6050.c...
-compiling IMU.c...
-compiling HMC5883L.c...
-compiling timer.c...
-compiling main.c...
-compiling stm32f0xx_it.c...
+compiling receivedata.c...
+..\..\BSP\receivedata.c(16): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
+                memset(RxBuff,0, strlen(RxBuff) );
+..\..\BSP\receivedata.c(47): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
+        if(!strcmp(Buff,"acc"))
+..\..\BSP\receivedata.c(51): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
+        else if(!strcmp(Buff,"gyro"))
+..\..\BSP\receivedata.c(55): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
+        else if(!strcmp(Buff,"mag"))
+..\..\BSP\receivedata.c(59): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
+        else if(!strcmp(Buff,"over"))
+..\..\BSP\receivedata.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=19220 RO-data=772 RW-data=152 ZI-data=1984  
+Program Size: Code=19920 RO-data=768 RW-data=152 ZI-data=2000  
 FromELF: creating hex file...
-".\Objects\GY_86_demo.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\GY_86_demo.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   D:\Users\πÀ”∞_\Desktop\Direction-module-of-unmanned-vehicle\Project\MDK-ARM\RTE
