片上flash保存数据

--- a/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
+++ b/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
@@ -26,23 +26,11 @@ Project File Date:  03/30/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling mpu6050.c...
-compiling receivedata.c...
-..\..\BSP\receivedata.c(16): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
-                memset(RxBuff,0, strlen(RxBuff) );
-..\..\BSP\receivedata.c(47): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
-        if(!strcmp(Buff,"acc"))
-..\..\BSP\receivedata.c(51): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
-        else if(!strcmp(Buff,"gyro"))
-..\..\BSP\receivedata.c(55): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
-        else if(!strcmp(Buff,"mag"))
-..\..\BSP\receivedata.c(59): warning:  #167-D: argument of type "u8 *" is incompatible with parameter of type "const char *"
-        else if(!strcmp(Buff,"over"))
-..\..\BSP\receivedata.c: 5 warnings, 0 errors
+compiling HMC5883L.c...
 linking...
-Program Size: Code=19920 RO-data=768 RW-data=152 ZI-data=2000  
+Program Size: Code=22848 RO-data=1040 RW-data=152 ZI-data=3104  
 FromELF: creating hex file...
-".\Objects\GY_86_demo.axf" - 0 Error(s), 5 Warning(s).
+".\Objects\GY_86_demo.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   D:\Users\πÀ”∞_\Desktop\Direction-module-of-unmanned-vehicle\Project\MDK-ARM\RTE
