--- a/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
+++ b/Project/MDK-ARM/Objects/GY_86_demo.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  03/30/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling HMC5883L.c...
+compiling usart.c...
 linking...
-Program Size: Code=22848 RO-data=1040 RW-data=152 ZI-data=3104  
+Program Size: Code=23084 RO-data=1044 RW-data=152 ZI-data=3104  
 FromELF: creating hex file...
 ".\Objects\GY_86_demo.axf" - 0 Error(s), 0 Warning(s).
 
